--- a/packages/TreeView/package.json
+++ b/packages/TreeView/package.json
@@ -22,5 +22,8 @@
     "@rabbitcc/stylekit": "*",
     "react": "^16",
     "react-dom": "^16"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
