--- a/packages/TreeView/package.json
+++ b/packages/TreeView/package.json
@@ -4,8 +4,8 @@
   "description": "<TreeView />",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-serve --config ../../webpack.config.js",
-    "build": "cross-env NODE_ENV=production webpack --config ../../webpack.config.js --env.name=TreeView",
+    "start": "cross-env UIKITPKG=TreeView NODE_ENV=development webpack-serve --config ../../webpack.config.js",
+    "build": "cross-env UIKITPKG=TreeView NODE_ENV=production webpack --config ../../webpack.config.js",
     "test": "jest"
   },
   "author": "HairyRabbit <yfhj1990@hotmail.com>",
@@ -16,7 +16,11 @@
     "*.css"
   ],
   "devDependencies": {
-    "@rabbitcc/stylekit": "^0.0.1"
+    "@rabbitcc/stylekit": "^0.0.1",
+    "flow-bin": "^0.66.0",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.9",
+    "webpack-serve": "^0.1.5"
   },
   "peerDependencies": {
     "@rabbitcc/stylekit": "*",
