--- a/package.json
+++ b/package.json
@@ -1,17 +1,10 @@
 {
   "name": "uikit",
   "version": "0.0.1",
-  "description": "",
+  "description": "uikit",
   "main": "lib/index.js",
   "scripts": {
-    "start": "yarn build && node bin/cli.js",
-    "prepublish": "yarn test && yarn build:prod",
-    "build": "cross-env NODE_ENV=development yarn rollup -c",
-    "build:prod": "cross-env NODE_ENV=production yarn rollup -c",
-    "build:type": "flow gen-flow-files src/index.js > lib/uikit.js.flow",
-    "test": "jest",
-    "test:coverage": "yarn test --coverage",
-    "test:type": "flow check"
+    "start": "yarn build && node bin/cli.js"
   },
   "keywords": [],
   "author": "",
@@ -30,24 +23,22 @@
     "@babel/preset-env": "^7.0.0-beta.40",
     "@babel/preset-flow": "^7.0.0-beta.40",
     "@babel/preset-react": "^7.0.0-beta.40",
+    "@rabbitcc/stylekit": "^0.0.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^22.4.1",
-    "babel-loader": "^7.1.3",
-    "flow-bin": "^0.66.0",
-    "jest": "^22.4.2",
-    "lerna": "^2.9.0",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.9",
-    "webpack-serve": "^0.1.4",
     "babel-loader": "8.0.0-beta.2",
     "css-loader": "^0.28.10",
-    "style-loader": "^0.20.2",
-    "postcss-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.0.4",
     "html-webpack-template": "^6.1.0",
+    "jest": "^22.4.2",
+    "lerna": "^2.9.0",
+    "postcss-loader": "^2.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "style-loader": "^0.20.2"
+    "style-loader": "^0.20.2",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.1.0"
   }
 }
