--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@babel/preset-env": "^7.0.0-beta.40",
     "@babel/preset-flow": "^7.0.0-beta.40",
     "@babel/preset-react": "^7.0.0-beta.40",
-    "@rabbitcc/stylekit": "^0.0.1",
+    "@rabbitcc/stylekit": "^0.0.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^22.4.1",
     "babel-loader": "8.0.0-beta.2",
     "css-loader": "^0.28.10",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.4",
@@ -37,6 +39,7 @@
     "postcss-loader": "^2.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-test-renderer": "^16.2.0",
     "style-loader": "^0.20.2",
     "url-loader": "^1.0.1",
     "webpack": "^4.1.0"
