--- a/packages/uikit/package.json
+++ b/packages/uikit/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@rabbitcc/stylekit": "^0.0.2",
     "@rabbitcc/uikit-avatar": "^0.0.1",
+    "@rabbitcc/uikit-avatar-list": "^0.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
