--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "html-webpack-template": "^6.1.0",
     "jest": "^22.4.2",
     "lerna": "^2.9.0",
+    "mini-css-extract-plugin": "^0.2.0",
     "postcss-loader": "^2.1.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -49,7 +50,7 @@
     "react-test-renderer": "^16.2.0",
     "style-loader": "^0.20.2",
     "url-loader": "^1.0.1",
-    "webpack": "^4.1.0",
+    "webpack": "^4.1.1",
     "webpack-serve": "^0.2.0"
   }
 }
