--- a/packages/AvatarList/package.json
+++ b/packages/AvatarList/package.json
@@ -32,6 +32,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@rabbitcc/uikit-avatar": "^0.0.1"
+    "@rabbitcc/uikit-avatar": "^0.0.1",
+    "webpack": "4.1.1"
   }
 }
