--- a/packages/uikit/package.json
+++ b/packages/uikit/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "webpack": "4.1.1",
     "webpack-cli": "^2.0.10"
   }
 }
