update AvatarEditor preview

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": "true",
   "name": "uikit",
   "version": "0.0.1",
   "description": "uikit",
@@ -52,5 +53,10 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.1.1",
     "webpack-serve": "^0.2.0"
-  }
+  },
+  "workspaces": [
+    "@rabbitcc/uikit-avatar",
+    "@rabbitcc/uikit-avatar-list",
+    "@rabbitcc/uikit-avatar-editor"
+  ]
 }
